<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp">

    <EditText
        android:id="@+id/edLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_log" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/edit_pass" />

    <Button
        android:id="@+id/bJoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_sign_in" />

    <Button
        android:id="@+id/bReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_sign_up" />
</LinearLayout>